<?xml version="1.0"?>
<package format="2">
  <name>mapper</name>
  <version>0.0.0</version>
  <description>The mapper package</description>

  <maintainer email="robotics@pensasystems.com">Pensa Robotics</maintainer>
  
  <author email="marcelino@pensasystems.com">Marcelino Almeida</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Confidential and Proprietary. Copyright (c) 2020 by Pensa Systems, Inc. -- All rights reserved</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pensa_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>pensa_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2</build_export_depend>

  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>pensa_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
